--- a/action.yml
+++ b/action.yml
@@ -1,4 +1,4 @@
-name: 'Hello World'
+name: 'Hello World From Devopulence'
 description: 'Greet someone and record the time'
 inputs: # input parameters are stored as environment variables
   who-to-greet:  # id of input
